--- a/frontend/assets/css/leaderboard.css
+++ b/frontend/assets/css/leaderboard.css
@@ -4,6 +4,12 @@ body {
   color: #ec4067;
   font-family: "Raleway", sans-serif;
 }
+#particles-js canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
 h2 {
   text-align: center;
   font-weight: bolder;
@@ -53,6 +59,13 @@ h2 {
 .sidenav a:hover {
   color: #ec4067;
 }
+@media screen and (max-width: 600px) {
+  .cards {
+    min-width: 100%;
+    max-width: 100%;
+  }
+}
+
 @media only screen and (min-width: 720px) {
   #menuButton {
     display: none;
@@ -62,16 +75,14 @@ h2 {
   }
   #main {
     width: calc(100vw - 300px);
-    margin-left: 55px;
-    padding: 0;
-    float: right;
+    text-align: center;
   }
 }
 @media only screen and (max-width: 720px) {
   .sidenav {
     animation: ltor 2s normal;
   }
-  .left {
+  .cards {
     margin-top: 4rem;
   }
 }
@@ -90,13 +101,21 @@ h2 {
   flex-wrap: wrap;
   align-items: center;
   position: absolute;
-  top: 50%;
+  margin: 0;
+  /*top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   margin-top: 50px;
+  padding: 20px; */
+}
+.cards {
   padding: 20px;
 }
-.card {
+.card-header {
+  text-align: center;
+  font-weight: bold;
+}
+/* .card {
   width: 450px;
   height: 250px;
   background-color: #fff;
@@ -263,4 +282,4 @@ h2 {
   bottom: 1rem;
   right: 1rem;
   font-size: 0.9em;
-}
+} */
