--- a/frontend/assets/css/admin.css
+++ b/frontend/assets/css/admin.css
@@ -17,3 +17,22 @@ input {
 .cursorPointer {
   cursor: pointer;
 }
+.loader {
+  border: 12px solid #f3f3f3; /* Light grey */
+  border-top: 12px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  animation: spin 2s linear infinite;
+}
+.fs-12 {
+  font-size: 12px !important;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
